1999-07-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* dropdir.c (SLASHP): New macro. 
	(dropdir): Use it.

1999-06-17  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* find_executable.c (find_executable): Have realpath write
	into a zeroed-out stack array, then strdup the result -- eliminate
	a Checker warning.

1999-06-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (noinst_LTLIBRARIES, lib_LTLIBRARIES): Substitute
	{inst,noinst}LIBS.
	(EXTRA_LTLIBRARIES): New variable.
	(libmisc_la_LDFLAGS): Substitute inst_LDFLAGS.

	* find_executable.c (maybe_executable): Disable Linux check
	for inode match.  It screws up with Java wrapper script.

	* misc.h (abort): #define to debugabort with file, line, and
	function name arguments.  Declare debugabort as nonreturning.

	* debugabort.c: New file.

1999-06-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (EXTRA_HEADERS): Set to argp.h.
	(misc_HEADERS): Use @ARGP_H@ instead of argp.h.

1999-05-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (noinst_LTLIBRARIES): Switch from lib_LTLIBRARIES.

1999-05-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* misc.h: Move include of swarmconfig.h to the top.
	Only include sys/sigevent.h if both __hpux__ and 
	HAVE_SYS_SIGEVENT_H.

1999-04-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* argp-parse.c: Declare alloca.  Don't include limits.h.

	* misc.h: For HPUX, include sys/sigevent.h before others.  This
	avoids warning implicit structure declaration.  Include limits.h.

1999-04-24  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* Makefile.am (ARGP_SRC): New variable.
	(EXTRA_DIST): Use it.
	(SRC): Move argp stuff to ARGP_SRC.

1999-04-19  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* avl.c: Include misc.h and remove xmalloc #ifdef logic.

	* find_executable.c (find_executable): Use xmalloc and XFREE
	instead of malloc and free.

1999-04-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
